# application/api/swagger/swagger.yaml
@@ -450,6 +450,101 @@ paths:
         "500":
           description: Internal Server Error
   
+  /curso/{curso_id}/aula/{aula_id}:
+    x-swagger-router-controller: aula
+    get:
+      tags:
+        - Aula
+      description: Resgatar Aulas
+      operationId: aulaResgatar
+      parameters:
+        - name: curso_id
+          in: path
+          description: Id do curso
+          required: true
+          type: integer
+        - name: aula_id
+          in: path
+          description: Id da aula
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+    put:
+      tags:
+        - Aula
+      description: Atualizar Aula
+      operationId: aulaAtualizar
+      parameters:
+        - name: curso_id
+          in: path
+          description: Id do curso
+          required: true
+          type: integer
+        - name: aula_id
+          in: path
+          description: Id do curso
+          required: true
+          type: integer
+        - name: body
+          in: body
+          description: Parâmetros para atualizar aula
+          required: true
+          schema:
+            $ref: "#/definitions/AulaRequest"
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+    delete:
+      tags:
+        - Aula
+      description: Remover aula (soft delete)
+      operationId: aulaRemover
+      parameters:
+        - name: aula_id
+          in: path
+          description: Id da aula
+          required: true
+          type: integer
+        - name: curso_id
+          in: path
+          description: Id do curso
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
 
   /swagger:
     x-swagger-pipe: swagger_raw
